fb/twitter button fixes; letter-spacing fixes
git-svn-id: http://svn.localprojects.net/gam2@725 befef031-aaeb-48d0-b70f-681328309d3d

--- a/trunk/static/css/tc.gam.main.css
+++ b/trunk/static/css/tc.gam.main.css
@@ -876,7 +876,7 @@ PAGE-SPECIFIC STYLES
 .project-header .tools .control { margin-left:50px; }
 
 .project-header .main { overflow:hidden; }
-.project-header .main h1 { margin:0; font-family: "ff-meta-serif-web-pro-1","ff-meta-serif-web-pro-2", Georgia, Times, Times New Roman, serif; font-size:38px; font-weight:normal; }
+.project-header .main h1 { margin:0; font-family: "ff-meta-serif-web-pro-1","ff-meta-serif-web-pro-2", Georgia, Times, Times New Roman, serif; font-size:38px; font-weight:normal; letter-spacing: -0.25px; }
 .project-header .main .meta { display:block; font-size:14px; font-style:normal; }
 .project-header .main .meta strong { font-family: "ff-meta-serif-web-pro-1","ff-meta-serif-web-pro-2", Georgia, Times, Times New Roman, serif; font-size:19px; }
 .project-header .main .sub-ft { margin:9px 0 0; }
@@ -1593,7 +1593,8 @@ div.continent.user-account .midlands .activity-view div.my-projects { margin-bot
 div.continent.user-account .midlands .activity-view div.my-projects .project-header { width:100%; margin-bottom: 15px; }
 div.continent.user-account .midlands .activity-view div.my-projects .project-header .thumb { width: 112px; }
 div.continent.user-account .midlands .activity-view div.my-projects .project-header .main { }
-div.continent.user-account .midlands .activity-view div.my-projects .project-header .main h1 { font-size: 30px; line-height: 34px; margin-bottom: 4px; }
+div.continent.user-account .midlands .activity-view div.my-projects .project-header .main h1 { 
+	font-size: 30px; line-height: 34px; margin-bottom: 4px; letter-spacing: 0; }
 div.continent.user-account .midlands .activity-view div.my-projects .project-header .tools { width: 120px; margin-right: 15px; margin-top: 11px; }
 div.continent.user-account .midlands .activity-view div.my-projects .project-header .tools .members { font-weight: bold; font-size: 14px; line-height: 14px; text-align: right; letter-spacing: 0.25px; background: none; padding-left: 0; }
 div.continent.user-account .midlands .activity-view div.my-projects .project-header .tools .members .counter { top: -1px; }
